clusters/dev/app/example-ingressroutes.yaml
apiVersion: apps/v1
kind: IngressRoute
metadata:
  name: simpleingressroute
  namespace: dev
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`your.example.com`) && PathPrefix(`/notls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
